@@ -47,9 +47,9 @@ IO::Interactive           = 0.0.6
 ; Command.pm
 Getopt::Long::Descriptive = 0.083
 Dir::Self                 = 0.10
+Term::Sk                  = 0.04
 
 ; ReadLine.pm
-Term::ProgressBar         = 2.00
 Term::ReadLine            = 0
 
 ; DBD.pm
